@@ -38,6 +38,9 @@ class PropertiesDock : public QDockWidget
 		void on_TrafficDirection_activated(int idx);
 		void on_Highway_activated(int idx);
 		void on_RemoveTagButton_clicked();
+		void on_SelectionList_itemSelectionChanged();
+		void on_SelectionList_itemDoubleClicked(QListWidgetItem* item);
+		void executePendingSelectionChange();
 
 	private:
 		void switchUi();
@@ -45,14 +48,17 @@ class PropertiesDock : public QDockWidget
 		void switchToTrackPointUi();
 		void switchToRoadUi();
 		void switchToMultiUi();
+		void fillMultiUiSelectionBox();
 
 		MainWindow* Main;
 		QWidget* CurrentUi;
 		std::vector<MapFeature*> Selection;
+		std::vector<MapFeature*> FullSelection;
 		Ui::TrackPointProperties TrackPointUi;
 		Ui::RoadProperties RoadUi;
 		Ui::MultiProperties MultiUi;
 		TagModel* theModel;
+		unsigned int PendingSelectionChange;
 
 		enum { NoUiShowing, TrackPointUiShowing, RoadUiShowing, MultiShowing } NowShowing ;
 };
@@ -63,7 +69,9 @@ void PropertiesDock::setSelection(const std::vector<T*>& aFeatureList)
 	Selection.clear();
 	for (unsigned int i=0; i<aFeatureList.size(); ++i)
 		Selection.push_back(aFeatureList[i]);
+	FullSelection = Selection;
 	switchUi();
+	fillMultiUiSelectionBox();
 }
 
 
